# words2numbers

./: README.md  VERSION  pyproject.toml  requirements.txt  setup.py
words2numbers/: __init__.py  _words2num.py  base.py  data.py  ejtoken.py  normalize.py  test.py  utils.py
words2numbers.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
words2numbers/tests/: test_base.py
